--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,8 @@
     <!-- to toggle the open close button of the navigation drawer -->
         <string name="nav_open">Open</string>
         <string name="nav_close">Close</string>
+    <!-- For Action Bar -->
+    <string name="action_favorite">Favourite</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
